syntax = "proto3";
package auth.v1;

option go_package="coolcar/auth/api/gen/v1;authpb";

message LoginRequest {
    string code = 1;
}

//小程序自定义登录态=token
message LoginResponse {
    string access_token = 1;
    //过期时间是s
    int32 expires_in_sec = 2;
}

service AuthService {
    rpc Login (LoginRequest) returns (LoginResponse);
}